added form to enter parameters

--- a/chartGenerator/templates/index.html
+++ b/chartGenerator/templates/index.html
@@ -2,5 +2,5 @@
 <h1>Welcome to the chart generation app!</h1>
 <br>
 <br>
-<a href="chart">Another page</a>
+<a href="chartform">Another page</a>
 {% endblock %}
