--- a/chartGenerator/templates/chart.html
+++ b/chartGenerator/templates/chart.html
@@ -12,7 +12,7 @@
 
         <!-- Content -->
         <div class="content">
-            <img src="{% static 'mobius.png' %}/?" />
+            <img src="{% static 'chart.png' %}/" />
         </div>
     </section>
 
