--- a/chartGenerator/templates/index.html
+++ b/chartGenerator/templates/index.html
@@ -3,12 +3,7 @@
 <!-- Header -->
 <header id="header" class="alt">
     <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
-    <nav id="nav">
-        <ul>
-            <li class="current"><a href="/cg/">Home</a></li>
-            <li class="chartform"><a href="chartform">New Chart</a></li>
-        </ul>
-    </nav>
+    {% include 'menu.html' %}
 </header>
 {% endblock %}
 
