--- a/chartGenerator/templates/base.html
+++ b/chartGenerator/templates/base.html
@@ -5,8 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Chart Generator..</title>
-
-
     <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
     <noscript><link rel="stylesheet" href="{% static 'assets/css/noscript.css' %}" /></noscript>
 
@@ -18,12 +16,9 @@
 <!-- Header -->
 <header id="header">
     <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
-    <nav id="nav">
-        <ul>
-            <li class="current"><a href="/cg/">Home</a></li>
-            <li class="chartform"><a href="chartform">New Chart</a></li>
-        </ul>
-    </nav>
+    <!-- include a other hmtl snipped to prevent writing it two times -->
+    <!-- extend menu in menu.html -->
+    {% include 'menu.html' %}
 </header>
 {% endblock %}
 
@@ -32,7 +27,7 @@
 
 <article id="main">
     {% block content %}
-
+        <!-- conntent block where each template which extends from base.html can put their content -->
 
     {% endblock %}
 </article>
